# pac-man-web-ai-generated

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  challenge_instructions.md  claude_code_main_prompts.md  compose.override.yml  compose.yml  index.html  nginx.conf  package-lock.json  package.json
.claude/skills/: deployment.md  fastapi-backend.md  react-three-fiber.md  three-js.md  vite-react-ts.md  zustand.md
.github/workflows/: deploy.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  routes.py
backend/tests/: conftest.py  test_health.py  test_leaderboard.py  test_models.py  test_rate_limiting.py  test_submit_score.py
docs/: 01-project-setup.md  02-typescript-fundamentals.md  03-react-fundamentals.md  04-react-three-fiber-basics.md  05-zustand-state-management.md  06-maze-generation.md  07-game-loop-and-movement.md  08-ghost-ai.md  09-pellets-scoring-collisions.md  10-level-progression.md  11-deployment.md  12-leaderboard-backend.md  plan.md
src/: App.tsx
src/api/: leaderboard.ts
src/audio/: musicEngine.ts
src/components/: Game.tsx
src/components/camera/: GameCamera.tsx
src/components/characters/: Ghost.tsx  PacMan.tsx
src/hooks/: useGameLoop.ts  useKeyboard.ts  useMusic.ts
src/stores/: gameStore.ts
src/systems/: collision.ts  ghostAI.ts  mazeGenerator.ts  movement.ts
src/types/: game.ts  maze.ts
src/ui/: GameOverScreen.tsx  HUD.tsx  Leaderboard.tsx  LevelTransition.tsx  Piano.tsx  StartScreen.tsx
src/utils/: constants.ts  helpers.ts
(+12 files in other folders)
