[project]
name = "pacman-leaderboard"
version = "0.1.0"
description = "Leaderboard API for Pac-Man web game"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlmodel>=0.0.22",
    "slowapi>=0.1.9",
    "pydantic-settings>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
